Clear use of the CRISP-DM for the structure main files and Readme

--- a/Data_exploration_flats_germany.ipynb
+++ b/Data_exploration_flats_germany.ipynb
@@ -6,7 +6,14 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "In this notebook I will do some exploratory data analysis for the appartment rental dataset of germany. I will focus on the NRW region, especially Düsseldorf for this analysis. The dataset I will be using is the cleaned dataset form kaggle \"[Apartment rental offers in Germany](https://www.kaggle.com/corrieaar/apartment-rental-offers-in-germany)\""
+    "This notebook continues after the data modeling part of CIRSP-DM after the data preparation was finished in the \"Data_cleaning_rent_flats_germany\" notebook\n",
+    "\n",
+    "## Reminder of the business questions:\n",
+    "\n",
+    "1. How expensive is to live in Düsseldorf compare to any other city in Nordrhein-Westfalen (NRW)?\n",
+    "2. How is the distribution of rent prices in the city? if we look for a specific borough/neighborhood and a given size?\n",
+    "3. How do the characteristics of a flat explain the variability in price?\n",
+    "4. Can the rent prices in Düsseldorf be accurately predicted using a linear model?"
    ]
   },
   {
@@ -58,6 +65,15 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Start the modeling**\n",
+    "\n",
+    "first find out the type of relationships between the variables. Do some exploration of the variables to understand how to fit the best model"
    ]
   },
   {
@@ -216,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The price per squared meter is clearly biased. Let us check by which percentile this is the case"
+    "The price per squared meter is clearly biased! **Iterate over the data preparation process** to correct this issue. I will start by checking the amount of biased data:"
    ]
   },
   {
@@ -955,14 +971,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a lot of variation in these variables."
+    "There is a lot of variation in these variables, which is good as the prediction power of the model will profit from this"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assessment of NRW and Düsseldorf"
+    "## Assessing the variables for Düsseldorf"
    ]
   },
   {
