--- a/Graphics_for_article.ipynb
+++ b/Graphics_for_article.ipynb
@@ -6,17 +6,16 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "The following is an analysis of the rent prices in Germany, specially for the capital of Nordrhein-Westfalen (Düsseldorf)\n",
+    "In this notebook we will finish the modeling and evaluation part. \n",
     "\n",
-    "I aim to answer three question:\n",
+    "## Fresh reminder of the business questions:\n",
+    "\n",
     "1. How expensive is to live in Düsseldorf compare to any other city in Nordrhein-Westfalen (NRW)?\n",
     "2. How is the distribution of rent prices in the city? if we look for a specific borough/neighborhood and a given size?\n",
-    "3. How do the characteristics of a flat explain the variability in prize?\n",
-    "\n",
-    "Bonus question:\n",
+    "3. How do the characteristics of a flat explain the variability in price?\n",
     "4. Can the rent prices in Düsseldorf be accurately predicted using a linear model?\n",
     "\n",
-    "This Notebook contains all the graphics shown in the article **add address**"
+    "This Notebook contains all the graphics shown in the article [\"Predicting rent prices in Germany: How expensive is really Düsseldorf?\"](https://medium.com/@juangarcia10/predicting-rent-prices-in-germany-how-expensive-is-really-d%C3%BCsseldorf-63484e4bf658)"
    ]
   },
   {
@@ -142,6 +141,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Continuation of the modeling and evaluation part:\n",
+    "\n",
     "First Graph: overview of offers accross germany"
    ]
   },
@@ -194,7 +195,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Second Graph: mean prices for each city in NRW focus DUS"
+    "**First question: How expensive is to live in Düsseldorf compare to any other city in Nordrhein-Westfalen (NRW)?**\n",
+    "\n",
+    "\n",
+    "mean prices for each city in NRW focus DUS"
    ]
   },
   {
@@ -245,7 +249,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graph 3: Distribution of the prices for each borough in the city of Düsseldorf"
+    "**Second question: How is the distribution of rent prices in the city? if we look for a specific borough/neighborhood and a given size?**\n",
+    "\n",
+    "Distribution of the prices for each borough in the city of Düsseldorf"
    ]
   },
   {
@@ -413,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Graph 4 some multidimensional plots"
+    "**Third question: How do the characteristics of a flat explain the variability in price?**"
    ]
   },
   {
@@ -539,7 +545,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Final Thought: Fitting a linear regression:"
+    "**Last question: Can the rent prices in Düsseldorf be accurately predicted using a linear model?**\n",
+    "\n",
+    "Fitting a linear regression:"
    ]
   },
   {
@@ -1062,6 +1070,20 @@
    "source": [
     "cutoffs = [1000, 500, 250, 200, 150, 100, 50, 30, 20, 10, 5]\n",
     "r2_scores_test, r2_scores_train, lm_model, X_train, X_test, y_train, y_test = find_optimal_lm_mod(X, y, cutoffs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The linear model makes a great job predicting the prices of the flats given the parameters. By including all the parameters we achieve an r_squared of almost 0.84, which means we can explain up to 84% of the variation in rent. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model will not be deployed to any symtem, that is why there is no final chapter for the deployment step in the CRISP-DM. "
    ]
   },
   {
