Ready for submission

--- a/Data_cleaning_rent_flats_germany.ipynb
+++ b/Data_cleaning_rent_flats_germany.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "I will divide this project into five categories from Business Understanding to Evaluation. You probably notice that \"deployment\" is being left behind. This is because my results are not being \"deployed\" to any other system\n",
     "\n",
-    "### Business Understanding\n",
+    "### Research Questions\n",
     "\n",
     "I am interested in undrestanding what factors affect the rent price of a flat in the capital of Nordrhein-Westfalen (NRW). Specially: \n",
     "1. How expensive is to live in Düsseldorf compare to any other city in Nordrhein-Westfalen (NRW)?\n",
